@startuml

class Feature {
  name  : string
  value  : string,boolean,integer

}

class BooleanFeature {
  value  : boolean

}
StringFeature <|-- BooleanFeature

class Item {
  id * : ItemId

}
Item -- ItemId  :  id
NewItem <|-- Item

class NewItem {
  name * : string
  location * : string
  description * : string
  type * : enum
  features * : array[] of Feature

}
NewItem *-- Feature  :  features

class NumericalFeature {
  value  : integer

}
StringFeature <|-- NumericalFeature

class StringFeature {
  name  : string
  value  : string

}

class UpdateItem {
  name  : string
  location  : string
  description  : string
  type  : enum
  features  : array[] of Feature

}
UpdateItem *-- Feature  :  features
@enduml
